--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -11,7 +11,7 @@ main {
   background-color: $Very_dark_blue2;
   margin-top: 7rem;
   flex-direction: column;
-  width: 35rem;
+  width: 33rem;
   padding: 2rem;
   border-radius: 2rem;
   -webkit-box-shadow: 0px 10px 13px -7px #000000,
@@ -28,11 +28,36 @@ main {
       height: 30rem;
       border-radius: 1rem;
 
+
+
       &:hover {
-        cursor: pointer;
-        background-image: url(/images/images/image-hover.png);
+     
+        .hover{
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: #00fff76c;
+          border-radius: 1rem;
+          
+        }
+
+
+
+
+
+
       }
     }
+
+    .hover{
+      height: 30rem;
+      display: none;
+    }
+
+
+
+
   }
 
   .info-princ {
@@ -49,7 +74,7 @@ main {
     }
     p {
       color: $Soft_blue;
-      font-size: 2.1rem;
+      font-size: 2rem;
       margin-top: 0;
       margin-bottom: 0;
     }
