--- a/src/scss/_globales.scss
+++ b/src/scss/_globales.scss
@@ -1,6 +1,6 @@
 //PRIMARIOS
 $Soft_blue: hsl(215, 51%, 70%);
-$Cyan: hsl(178, 100%, 50%);
+$Cyan: #00fff7;
 
 //SECUNDARIOS
 $Very_dark_blue: hsl(217, 54%, 11%);
